задал полю формы popup класс для того, чтобы прописать на него фокус при открытии мод. окна, ранее использовал класс у тега label

--- a/catalog.html
+++ b/catalog.html
@@ -199,7 +199,7 @@
     <section class="popup">
       <h2 class="popup-title">Напишите нам</h2>
       <form class="popup-form" action="https://echo.htmlacademy" method="post">
-        <label class="name">Ваше имя:<input class="invalid" type="text" name="fullname" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
+        <label class="name">Ваше имя:<input class="focus-name" type="text" name="fullname" placeholder="Имя Фамилия" aria-label="Поле для имени и фамилии"></label>
         <label class="mail">Ваш e-mail:<input type="text" name="e-mail" placeholder="email@example.com" aria-label="Поле для email"></label>
         <label class="letter">Текст письма:<textarea name="letter" placeholder="В свободной форме" aria-label="Поле для обращения"></textarea></label>
         <button class="modal-button button" type="submit">Отправить</button>
