убрал из атрибута href ссылок в сортировке карточек часть имени произвольных адресов

--- a/catalog.html
+++ b/catalog.html
@@ -106,13 +106,13 @@
             <p class="sort-title">Сортировать:</p>
             <ul class="sorting-type">
               <li>
-                <a class="sort-item" href="nerds.ru/filter-sort/price">По цене</a>
+                <a class="sort-item" href="nerds.ru">По цене</a>
               </li>
               <li>
-                <a class="sort-item" href="nerds.ru/filter-sort/type">По типу</a>
+                <a class="sort-item" href="nerds.ru">По типу</a>
               </li>
               <li>
-                <a class="sort-item" href="nerds.ru/filter-sort/name">По названию</a>
+                <a class="sort-item" href="nerds.ru">По названию</a>
               </li>
             </ul>
             <ul class="sorting-direction">
