--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   <title>Магазин Nёрдс</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/min-style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -225,7 +225,7 @@
         <p class="discont">Скидка 10% для друзей из социальных сетей.</p>
       </div>
     </section>
-    <script src="js/popup.js"></script>
+    <script src="js/popoup-min-code.js"></script>
   </footer>
 </body>
 
