--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   <title>Магазин Nёрдс</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/min-style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -106,7 +106,7 @@
             <p class="sort-title">Сортировать:</p>
             <ul class="sorting-type">
               <li>
-                <a class="sort-item" href="nerds.ru">По цене</a>
+                <a class="sort-item">По цене</a>
               </li>
               <li>
                 <a class="sort-item" href="nerds.ru">По типу</a>
@@ -116,7 +116,7 @@
               </li>
             </ul>
             <ul class="sorting-direction">
-              <li><a class="down" href="nerds.ru"><span class="visually-hidden">Сортировка по убыванию</span></a></li>
+              <li><a class="down"><span class="visually-hidden">Сортировка по убыванию</span></a></li>
               <li><a class="up" href="nerds.ru"><span class="visually-hidden">Сортировка по возрастанию</span></a></li>
             </ul>
           </section>
